Add TOC directive to DOF adoc file

--- a/DOF.adoc.liquid
+++ b/DOF.adoc.liquid
@@ -3,6 +3,8 @@
 :revnumber: v{{architecture.package.version}}
 :revdate: {{architecture.generationDate}}
 
+:toc:
+
 // github specific things
 ifdef::env-github[]
 :tip-caption: :bulb:
