--- a/DOF.adoc.liquid
+++ b/DOF.adoc.liquid
@@ -3,7 +3,7 @@
 :revnumber: v{{architecture.package.version}}
 :revdate: {{architecture.generationDate}}
 
-:toc:
+:toc: left
 
 // github specific things
 ifdef::env-github[]
